<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/vehiclesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_car_repair_24"
        android:title="@string/vehiclesText" />

    <item
        android:id="@+id/datesFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_calendar_month_24"
        android:title="@string/datesText" />
    <item
        android:id="@+id/profileFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/profileText" />
</menu>